# claw-code

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  USAGE.md
docs/: DOCKER.md  SETUP_AND_OPERATIONS.md
rust/: MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  USAGE.md
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: provider_client_integration.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: config.rs  env_file.rs  file_ops.rs  lib.rs  lsp_client.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  plugin_lifecycle.rs  task_registry.rs  team_cron_registry.rs
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/tools/src/: lane_completion.rs  lib.rs
rust/crates/web-api/: Cargo.toml
rust/crates/web-api/src/: main.rs
rust/crates/web-api/static/: app.js  index.html  styles.css
