[package]
name = "web-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw-web"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tools = { path = "../tools" }

[lints]
workspace = true
